--- a/front/truespotFront/src/app/components/auth/sign-in/sign-in.component.html
+++ b/front/truespotFront/src/app/components/auth/sign-in/sign-in.component.html
@@ -1,42 +1,40 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
-    <div class="well-block">
-      <div class="well-title">
+      <div class="well-block">
+        <div class="well-title">
 
-        <div class="row col-sm-6" style="max-width:350px;">
-          <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
-            <div class="form-group">
-              <label for="pseudo">Pseudo</label>
-              <input type="text" class="form-control" name="pseudo" [(ngModel)]="form.pseudo" #pseudo="ngModel"
-                     required />
-              <div *ngIf="f.submitted && pseudo.invalid">
-                <div *ngIf="pseudo.errors.required">Pseudo est requis !</div>
+          <div class="row col-sm-6" style="max-width:350px;">
+            <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+              <div class="form-group">
+                <label for="pseudo">Pseudo</label>
+                <input type="text" class="form-control" name="pseudo" [(ngModel)]="form.pseudo" #pseudo="ngModel"
+                       required />
+                <div *ngIf="f.submitted && pseudo.invalid">
+                  <div *ngIf="pseudo.errors.required">Pseudo est requis !</div>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
-                     required minlength="6" />
-              <div *ngIf="f.submitted && password.invalid">
-                <div *ngIf="password.errors.required">Password est requis !</div>
-                <div *ngIf="password.errors.minlength">Password doit posséder au moins 6 charactères</div>
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
+                       required minlength="6" />
+                <div *ngIf="f.submitted && password.invalid">
+                  <div *ngIf="password.errors.required">Password est requis !</div>
+                  <div *ngIf="password.errors.minlength">Password doit posséder au moins 6 charactères</div>
+                </div>
               </div>
-            </div>
-            <div class="form-group">
-              <button class="btn btn-primary">Login</button>
-              <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
-                Login failed: {{errorMessage}}
+              <div class="form-group">
+                <button class="btn btn-primary">Login</button>
+                <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
+                  Login failed: {{errorMessage}}
+                </div>
               </div>
-            </div>
-          </form>
-          <hr />
-            <a href="signup" class="btn btn-success">Nouveau ? Créez votre compte !
-              <app-user-message></app-user-message></a>
-
+            </form>
+            <hr />
+            <a class="btn btn-success" (click)="navigateToRegister()">Nouveau ? Créez votre compte !</a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </div>
