--- a/front/truespotFront/src/app/components/road/update-road/update-road.component.html
+++ b/front/truespotFront/src/app/components/road/update-road/update-road.component.html
@@ -103,7 +103,7 @@
                   <div class="form-group">
                     <button
                       type="submit"
-                      class="btn btn-primary">Mettre à joure
+                      class="btn btn-primary">Mettre à jour
                     </button>
                   </div>
                 </div>
