--- a/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
+++ b/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
@@ -69,14 +69,13 @@
               <div class="col-md-3"></div>
               <div class="col-md-3">
             <td>
-              <button type="button" class="btn btn-info" data-toggle="modal" data-target="#addArea"
-                      (click)="null">Modifier le profil</button>
+              <button type="button" class="btn btn-info" data-toggle="modal" data-target="#updateUser">Modifier le profil</button>
             </td>
             </div>
+
               <div class="col-md-3">
             <td>
-              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteArea"
-                      (click)="null">Supprimer mon compte</button>
+              <button type="button" class="btn btn-danger" (click)="deleteUser(user)">Supprimer mon compte</button>
             </td>
                 <br>
             </div>
@@ -85,6 +84,19 @@
           <br>
 
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div  *ngIf="user" class="modal fade" id="updateUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <app-update-user [user]="user "></app-update-user>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="null">Fermer</button>
       </div>
     </div>
   </div>
